[pom] Add argline add opens for java.lang for surefire